syntax = "proto3";

package pass;

import "types.proto";

service Pass {
  rpc GetPassword(types.Uuid) returns (Password);
  rpc GetPasswords(types.Empty) returns (Passwords);
  rpc AddPassword(AddPasswordRequest) returns (types.Uuid);
  rpc UpdatePassword(UpdatePasswordRequest) returns (types.Empty);
  rpc DeletePassword(DeletePasswordRequest) returns (types.Empty);
}

message AddPasswordRequest {
  bytes name = 1;
  bytes password = 2;
  optional bytes website = 3;
  optional bytes username = 4;
  optional bytes description = 5;
}

message UpdatePasswordRequest {
  bytes uuid = 1;
  optional bytes name = 2;
  optional bytes password = 3;
  optional bytes website = 5;
  optional bytes username = 6;
  optional bytes description = 7;
}

message DeletePasswordRequest {
  bytes uuid = 1;
}

message Password {
  bytes uuid = 1;
  bytes name = 2;
  bytes password = 3;
  optional bytes website = 5;
  optional bytes username = 6;
  optional bytes description = 7;
}

message Passwords {
  repeated Password passwords = 1;
}
